--- a/404.md
+++ b/404.md
@@ -1,6 +1,9 @@
 ---
+title: 404
 layout: base-EN
 permalink: /404.html
 ---
+
+# Page not Found
 
 ![page not found](/images/404.gif "page not found")
